<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoEkspert</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="this_field_is_required">This field is required!</string>
    <string name="title_activity_to_do_list">TodoEkspert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_add_todo">Add new Todo</string>
    <string name="what_needs">What needs to be done?</string>
    <string name="Done">Done</string>
    <string name="add_todo">Add Todo</string>
    <string name="title_activity_add_to_do">Add new Todo</string>
    <string name="needs_tobe_done">What needs to be done?</string>
    <string name="done">Done</string>
    <string name="add_to_list">Add To List</string>

</resources>
