<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hello.seanbroomfield.todo.AddToDoActivity">

    <EditText
        android:id="@+id/content_et"
        android:hint="@string/needs_tobe_done"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/done_cb"
        android:text="@string/done"
        android:layout_below="@+id/content_et"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_bt"
        android:padding="20dp"
        android:text="@string/add_to_list"
        android:layout_below="@+id/done_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
