<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username_et"
        android:hint="@string/enter_your_username"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password_et"
        android:hint="@string/enter_your_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:background="@drawable/todo_button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
